--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <item name="colorSurface">@color/surface</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+    <style name="Theme.CUCEIIA2.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.CUCEIIA2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Theme.CUCEIAI" parent="Base.Theme.CUCEIAI" />
 </resources>
