--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
             android:text="@string/menu_titulo1"
             android:textColor="@color/white"
             android:textSize="50sp"
@@ -46,40 +47,59 @@
         <Button
             android:id="@+id/button_ini_sesion_principal"
             style="@style/Widget.Material3.Button.IconButton.Filled"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
             android:text="@string/menu_button1"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            app:cornerRadius="15dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.08"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintWidth_percent="0.5" />
 
-        <TextView
-            android:id="@+id/textView3"
+        <Button
+            android:id="@+id/button_ini_sesion_principal2"
+            style="@style/Widget.Material3.Button.IconButton.Filled"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:text="@string/msj_inisesion_8"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            app:cornerRadius="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.09"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_ini_sesion_principal"
+            app:layout_constraintWidth_percent="0.55" />
+
+        <Button
+            android:id="@+id/Acesomn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/menu_pregunta"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="60dp"
+            android:backgroundTint="#7CEAF4"
+            android:text="Menu"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_ini_sesion_principal" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:text="@string/menu_button2"
-            android:textColor="#277DFB"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="31dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/button_ini_sesion_principal2"
+            app:layout_constraintEnd_toStartOf="@+id/button_ini_sesion_principal2"
+            app:layout_constraintTop_toTopOf="@+id/button_ini_sesion_principal2"
+            app:srcCompat="@drawable/googleg_standard_color_18" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
