--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="surface">#403F3E</color>        <!-- Color de fondo -->
     <color name="on_primary">#FFFFFF</color>     <!-- Color de texto sobre primary -->
     <color name="bluedeep">#111C54</color>
+    <color name="blueGooGle">#03A9F4</color>
 </resources>
