--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,10 +59,10 @@
             app:layout_constraintHeight_percent="0.08"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintWidth_percent="0.5" />
+            app:layout_constraintWidth_percent="0.6" />
 
         <Button
-            android:id="@+id/button_ini_sesion_principal2"
+            android:id="@+id/buttonInicgoogle"
             style="@style/Widget.Material3.Button.IconButton.Filled"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -94,9 +94,9 @@
             android:id="@+id/imageView2"
             android:layout_width="31dp"
             android:layout_height="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/button_ini_sesion_principal2"
-            app:layout_constraintEnd_toStartOf="@+id/button_ini_sesion_principal2"
-            app:layout_constraintTop_toTopOf="@+id/button_ini_sesion_principal2"
+            app:layout_constraintBottom_toBottomOf="@+id/buttonInicgoogle"
+            app:layout_constraintEnd_toStartOf="@+id/buttonInicgoogle"
+            app:layout_constraintTop_toTopOf="@+id/buttonInicgoogle"
             app:srcCompat="@drawable/googleg_standard_color_18" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
