--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +23,7 @@
             android:layout_height="match_parent" />
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/bluedeep"
@@ -98,11 +100,24 @@
                 android:layout_weight="1"
                 android:background="@drawable/buscador_right"
                 android:hint="@string/inicio_app_buscador"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:paddingStart="10dp"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="#838080" />
 
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewResultados"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_container"
+            app:layout_constraintWidth_percent="0.9" />
 
         <!-- Sección Recomendados -->
         <TextView
@@ -149,6 +164,7 @@
             app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
 
         <HorizontalScrollView
+            android:id="@+id/horizontalScrollView2"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="15dp"
