--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -121,7 +121,7 @@
 
         <!-- Sección Recomendados -->
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView8e"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -134,11 +134,11 @@
             app:layout_constraintTop_toBottomOf="@id/search_container" />
 
         <HorizontalScrollView
-            android:id="@+id/horizontalScrollView"
+            android:id="@+id/horizontalScrollView2"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/textView8">
+            app:layout_constraintTop_toBottomOf="@id/textView8e">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -150,34 +150,6 @@
         </HorizontalScrollView>
 
         <!-- Sección Mejor valorados -->
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/inicio_app_mejor_valorados"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />
-
-        <HorizontalScrollView
-            android:id="@+id/horizontalScrollView2"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/textView9">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingEnd="20dp">
-                <!-- Contenido dinámico aquí -->
-            </LinearLayout>
-        </HorizontalScrollView>
 
         <ImageButton
             android:id="@+id/buttonMenu"
