--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="on_primary">#FFFFFF</color>     <!-- Color de texto sobre primary -->
     <color name="bluedeep">#111C54</color>
     <color name="blueGooGle">#03A9F4</color>
+    <color name="colorPrimaryDark">#FF000000</color>
 </resources>
