--- a/app/src/main/res/layout/dialog_chart.xml
+++ b/app/src/main/res/layout/dialog_chart.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/rounded_dialog"> <!-- Aplica el fondo redondeado -->
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
@@ -16,7 +17,7 @@
         android:id="@+id/tvInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:paddingTop="8dp"/>
 </LinearLayout>
